--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,10 +4,12 @@ one:
   name: User One
   email: one@test.com
   password_digest: <%= default_password_digest %>
-  token_signiture: <%= SecureRandom.urlsafe_base64 %>
+  auth_signature: <%= SecureRandom.urlsafe_base64 %>
+  auth_signature_created_at: <%= Time.now %>
 
 two:
   name: User Two
   email: two@test.com
   password_digest: <%= default_password_digest %>
-  token_signiture: <%= SecureRandom.urlsafe_base64 %>
+  auth_signature: <%= SecureRandom.urlsafe_base64 %>
+  auth_signature_created_at: <%= Time.now %>
